kernel/tests/data/invalid/constructor_not_a_type.ck
data Unit : Type where
  | mk : Unit

data Invalid : Type where
  | c : Unit.mk